
    * window.m:
    Prevent creating NSPanel before NSApp is running.
    * dockedapp.m (removed):
    * WMDockedAppPanel.m:
    rewrite dockedapp into WMDockedAppPanel.
    * WINGs/wtextfield.c:
    * WINGs/winputmethod.c:
    not used and removed.
    * dialog.m:
    use NSRunAlertPanel() for wMessage...().
    * WINGs/wbox.c:
    * WINGs/wpanel.c:
    not used and removed.

2006-02-18 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * WMWindowInspector.h:
    * WMWindowInspector.m:
    * winspector.h (removed):
    * winspector.m (removed):
    rewrite winspector into WMWindowInspector.
    * WINGs/configuration.c (removed):
    * WindowMaker.h:
    merge WPreferences and WINGsConfiguration.
    * WINGs/wapplication.c:
    removed.
    * WMDockedAppPanel.h:
    * WMDockedAppPanel.m:
    new.

2006-02-15 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Initial import.
    * WMWindowInspector.m: finish up interface.

a26: * start to work on winspector.
a25: * clean up icon chooser in dialog and remove unused files in WINGs.
a24: * first implementation of icon chooser.
a23: * remove unused code.
a22: * save sessions into GNUstep user default.
a21: * move window attributes into GNUstep user default.
a20: * draw background in solid color.
a19: * keep working on default.m.
a18: * keep working on default.m.
a17: * start to clean up defaults.m.
a16: * text.h and text.m because menu is not editable anymore.
       The only editable menu, workspace menu, is in WMaker menu.
     * open WMaker menu with right mouse click.
     * start working on window inspector.
a15: * remove switch_menu.
a14: * move switchmenu into WMaker menu.
a13: * remove most of unused code.
a12: * add execCommand() from rootmenu.
     * remove workspace menu, usermenu (not used mostly) and most of rootmenu 
       in favor of WMaker menu.
     * remove WDRootMenu.
     * remove menu editing.
a11: * add session, windows, workspace commands from rootmenu.